@@ -1,3 +1,4 @@
+2/10/14 fix display of H2O values on graph indicators, broken when I rewrote toScientificNotation on 1/29/14
 2/10/14 make arrow always visible in linear graph, not just when some value is off-scale
 2/10/14 add a break below arrow head in linear graph
 2/10/14 slow down auto-fill animation (from 0.5 sec to 0.65 sec) because it seemed a little fast
